# crypto_scanner_no_db

./: README.md  pyproject.toml
src/: alembic.ini  main.py
src/apps/authentication/login/: __init__.py  views.py
src/apps/authentication/register/: __init__.py  views.py
src/apps/calculator/: __init__.py  views.py
src/apps/default/: __init__.py  views.py
src/apps/networks/bitcoin/: calculator.py
src/apps/networks/ethereum/: calculator.py  cg_eth_contract_id_map.json  token_metadata.json
src/apps/networks/solana/: calculator.py
src/apps/openai/: __init__.py  views.py
src/conf/: __init__.py
src/core/: app.py  database.py
src/migrations/: env.py
src/migrations/versions/: 2025_09_26_4b9f8024db1a_added_created_at_to_user.py  2025_09_26_6ffff963f29d_add_user_model.py
src/models/: users.py
src/templates/: __init__.py  calculator.html  error.html  index.html
src/utils/: utils.py
