[project]
name = "crypto-scanner"
version = "0.1.0"
description = "app to check balances of crypto wallets"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "async-lru (>=2.0.5,<3.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "openai (>=2.6.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "solders (>=0.27.1,<0.28.0)",
    "solana (>=0.36.10,<0.37.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
